[gd_scene load_steps=4 format=3 uid="uid://dhjmemycsexdb"]

[ext_resource type="Script" path="res://hud/HUD.gd" id="1_dqt4t"]
[ext_resource type="Texture2D" uid="uid://bt27tbxn86wmx" path="res://assets/art/taco-frame-1.png" id="2_ulbbx"]
[ext_resource type="FontFile" uid="uid://3gx0n31uvrdx" path="res://assets/fonts/joystix/joystix monospace.otf" id="2_xr73i"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dqt4t")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -194.0
offset_top = 3.23373
offset_right = 230.0
offset_bottom = 94.2337
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_xr73i")
theme_override_font_sizes/font_size = 64
text = "Score: 0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
offset_left = 206.052
offset_top = 131.467
offset_right = 967.052
offset_bottom = 313.467
theme_override_fonts/font = ExtResource("2_xr73i")
theme_override_font_sizes/font_size = 64
text = "BUG SQUASHER!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StartButton" type="Button" parent="."]
offset_left = 140.234
offset_top = 440.0
offset_right = 1065.23
offset_bottom = 536.0
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_xr73i")
theme_override_font_sizes/font_size = 51
text = "Start Without Tutorial"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EndButton" type="Button" parent="."]
visible = false
offset_left = 420.0
offset_top = 484.0
offset_right = 743.0
offset_bottom = 580.0
theme_override_fonts/font = ExtResource("2_xr73i")
theme_override_font_sizes/font_size = 64
text = "End Game"

[node name="TacoCountLabel" type="Label" parent="."]
offset_left = 81.0
offset_top = 589.0
offset_right = 233.0
offset_bottom = 673.0
theme_override_fonts/font = ExtResource("2_xr73i")
theme_override_font_sizes/font_size = 50
text = "x0"

[node name="Taco" type="Sprite2D" parent="."]
position = Vector2(36, 625)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ulbbx")

[node name="TutorialButton" type="Button" parent="."]
offset_left = 420.0
offset_top = 311.312
offset_right = 684.0
offset_bottom = 407.312
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_xr73i")
theme_override_font_sizes/font_size = 64
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="EndButton" to="." method="_on_end_button_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_start_with_tutorial"]
